src/styles/variables/buttons.scss
:root {
  --button-color-background-disabled: var(--color-brand-primary-light);

  /* small */
  --button-size-sm-border-radius: var(--form-control-size-sm-border-radius);
  --button-size-sm-font-size: var(--form-control-size-sm-font-size);
  --button-size-sm-padding-vertical: var(--size-spacing-xs);
  --button-size-sm-padding-horizontal: var(--size-spacing-sm);

  /* medium (default) */
  --button-size-md-border-radius: var(--form-control-size-md-border-radius);
  --button-size-md-font-size: var(--form-control-size-md-font-size);
  --button-size-md-padding-vertical: var(--size-spacing-sm);
  --button-size-md-padding-horizontal: var(--size-spacing-md);

  /* large */
  --button-size-lg-border-radius: var(--form-control-size-lg-border-radius);
  --button-size-lg-font-size: var(--form-control-size-lg-font-size);
  --button-size-lg-padding-vertical: var(--size-spacing-md);
  --button-size-lg-padding-horizontal: var(--size-spacing-lg);


  /* PRIMARY */
  --button-background-color-primary: var(--color-brand-primary-base);
  --button-font-color-primary: var(--color-brand-white-base);
  --button-background-hover-color-primary: var(--color-brand-primary-600);

  --button-border-color-primary-outline: var(--color-brand-primary-base);
  --button-background-color-primary-outline: transparent;
  --button-font-color-primary-outline: var(--color-brand-primary-base);
  --button-border-hover-color-primary-outline: var(--color-brand-primary-base);
  --button-background-hover-color-primary-outline: var(--color-brand-primary-base);
  --button-font-hover-color-primary-outline: var(--color-brand-white-base);

  /* SUCCESS */
  --button-background-color-success: var(--color-brand-success-base);
  --button-font-color-success: var(--color-brand-white-base);
  --button-background-hover-color-success: var(--color-brand-success-600);

  --button-border-color-success-outline: var(--color-brand-success-base);
  --button-background-color-success-outline: transparent;
  --button-font-color-success-outline: var(--color-brand-success-base);
  --button-border-hover-color-success-outline: var(--color-brand-success-base);
  --button-background-hover-color-success-outline: var(--color-brand-success-base);
  --button-font-hover-color-success-outline: var(--color-brand-white-base);

  /* DANGER */
  --button-background-color-danger: var(--color-brand-danger-base);
  --button-font-color-danger: var(--color-brand-white-base);
  --button-background-hover-color-danger: var(--color-brand-danger-600);

  --button-border-color-danger-outline: var(--color-brand-danger-base);
  --button-background-color-danger-outline: transparent;
  --button-font-color-danger-outline: var(--color-brand-danger-base);
  --button-border-hover-color-danger-outline: var(--color-brand-danger-base);
  --button-background-hover-color-danger-outline: var(--color-brand-danger-base);
  --button-font-hover-color-danger-outline: var(--color-brand-white-base);

  /* LIGHT */
  --button-background-color-light: var(--color-brand-light-base);
  --button-font-color-light: var(--color-brand-dark-base);
  --button-background-hover-color-light: var(--color-brand-grey-light);

  --button-border-color-light-outline: var(--color-brand-light-base);
  --button-background-color-light-outline: transparent;
  --button-font-color-light-outline: var(--color-brand-light-base);
  --button-border-hover-color-light-outline: var(--color-brand-light-base);
  --button-background-hover-color-light-outline: var(--color-brand-light-base);
  --button-font-hover-color-light-outline: var(--color-brand-dark-base);

  /* DARK */
  --button-background-color-dark: var(--color-brand-dark-base);
  --button-font-color-dark: var(--color-brand-white-base);
  --button-background-hover-color-dark: var(--color-brand-black-base);

  --button-border-color-dark-outline: var(--color-brand-dark-base);
  --button-background-color-dark-outline: transparent;
  --button-font-color-dark-outline: var(--color-brand-dark-base);
  --button-border-hover-color-dark-outline: var(--color-brand-dark-base);
  --button-background-hover-color-dark-outline: var(--color-brand-dark-base);
  --button-font-hover-color-dark-outline: var(--color-brand-white-base);
}

